# inspect-judge-drift

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
inspect_judge_drift/: __init__.py  _drift.py  _grading.py  _metrics.py
tests/: test_judge_drift.py
